--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "ts-node server.ts"
   },
   "dependencies": {
+    "@prisma/client": "3.10.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.19",
+    "nodemon": "^2.0.15",
+    "prisma": "^3.10.0",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
