--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
+    "prestart": "tsc",
+    "start": "node dist/server.js",
     "dev": "ts-node server.ts"
   },
   "dependencies": {
