feat: config ports

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prestart": "tsc",
+    "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node server.ts"
   },
