feat: add todos routes

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:3zhOeKHcJzfYhxZd6SW6@containers-us-west-28.railway.app:7193/railway"
+PORT=3333
