--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "3.10.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
     "nodemon": "^2.0.15",
